# pre-intreview-task

./: README.md  manage.py  pyproject.toml  requirements.txt
incling_task/: settings.py  urls.py  wsgi.py
pre_interview_task/: settings.py  urls.py  wsgi.py
task/: admin.py  models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py
task_app/: models.py  serializers.py  urls.py  views.py
task_app/migrations/: 0001_initial.py
